--- a/biografia.html
+++ b/biografia.html
@@ -57,6 +57,10 @@
         <br>
         Yann se encuentra estuando en <b>THE BRIDGE</b> con intenciones de convertirse muy próximamente en <b>Full Stack Developper.</b>
         <img src="#" alt="fotoTHEbridge">
-        </div>
+     </div>
+
+     <aside>
+         <p>esto es el aside</p>
+     </aside>
 </body>
 </html>
