--- a/home.html
+++ b/home.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
-    <link rel="stylesheet" href="estilohome.css">
-</head>
-<body>
+    <link rel="stylesheet" href="estilohome.css" />
+  </head>
+  <body>
     <div class="grande">
+      <header>
+        <nav class="navbar">
+          <div class="logo">
+            <h2>Yann <span>Poirot</span></h2>
+          </div>
 
-<header>
-    <nav class="navbar">
-        <div class="logo">
-            <h2>
-                Yann <span>Poirot</span>
-            </h2>
-
-
-        </div>
-
-        <ul class="menu">
+          <ul class="menu">
             <li><a href="biografia.html">Biografía</a></li>
             <li><a href="home.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+          </ul>
+        </nav>
+      </header>
 
-
-    </nav>
-    
-
-</header>
-
+      <div class="contenido1">
+        <div class="contenido2">
+          <h1>Hello, I'm <span> Yann Poirot </span></h1>
+          <p>
+            ote: Browsers do not always display the image refere nced by the
+            element. This is the case for non-graph ical browsers (including
+            those used by people with visual impairments), if the user chooses
+            <br />
+            not to disp lay images, or if the browser cannot display the image
+            because
+            <br />it is invalid or an unsupported type. In these cases, the
+            browser may replace the image with the text defined in this
+            element's alt attribute. You should, for these reasons and others,
+            provide a useful value for alt whenever possible. Note: Omitting
+            this attribute altogether indic
+          </p>
+          <a download="#" href="#">
+            <button class="descargacv">Descarga el CV de Yann</button>
+          </a>
+        </div>
+        <img src="noche.jpg" alt="foto de noche"
+      </div>
     </div>
-</body>
+  </body>
 </html>
