--- a/biografia.html
+++ b/biografia.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BIOGRAFÍA</title>
     <link rel="stylesheet" type="text/css" href="biografia.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="grande">
@@ -26,13 +33,13 @@
 
       <div class="granprimera">
         <div class="peqprimera">
-          <h3>Yann estudiando</h3>
+          <h3>Yann <span>estudiando</span></h3>
           <p>
             De formación en humanidades, en concreto <b>sociología</b> en la
             Universidad Complutense de Madrid. La trayectoria académica no se
             queda ahí, tras la carrera, Yann vuelve a su cuidad originaria, Lyon
-            - Francia, para seguiur con sus planes de doctorado sobre la vida
-            amorosa y sexual de los sin-techo, en la universidad de Lyon II
+            - Francia, para seguiur con sus planes de doctorado sobre <i>la vida
+              amorosa y sexual de los sin-techo</i>, en la universidad de Lyon II
             Lumière. Tras esta imposibilidad de conseguir financiación doctoral
             llega el momento de plantearse y ponerse la corbata...
           </p>
@@ -40,9 +47,9 @@
         <img src="pc.jpg" alt="fotopc" />
       </div>
 
-      <!-- 
-        <div class="segunda">
-          <h2>Los trabajos de Yann</h2>
+      <div class="gransegunda">
+        <div class="peqsegunda">
+          <h3><span>Los trabajos</span> de Yann</h2>
           <p>
             Con un diploma de sociología hay 3 principales salidas laborales:
           </p>
@@ -62,26 +69,29 @@
             <b>personal IT.</b>
             <br />
           </p>
-          <img src="carnet.jpg" alt="fotocarnet" />
         </div>
-
-        <div class="tercera">
-          <h3>Los nuevos horizontes de 2022</h3>
+        <img src="carnet.jpg" alt="fotocarnet" />
+      </div>
+      <!-- AQUI EMPIEZA LA TERCERA -->
+        <div class="grantercera">
+          <div class="peqtercera">
+          <h3>Los nuevos <span>horizones</span> de 2022</h3>
           <p>
             Los recursos humanos suponen un antes y un despues en la vida de
-            Yann, más allá de sólo haber trabajado 6 meses.<br />
-            La familiarización con los perfiles IT hicieron pensar muy
-            seriamente el hace run giro radical en la carrera y empezar a
+            Yann, más allá de sólo haber trabajado 6 meses.<br>
+            La familiarización con los <b>perfiles</b> IT hicieron pensar muy
+            seriamente el hacer un giro radical en la carrera y empezar a
             programar.
           </p>
-          <br />
+          <br>
           Yann se encuentra estuando en <b>THE BRIDGE</b> con intenciones de
           convertirse muy próximamente en <b>Full Stack Developper.</b>
+        </div>
           <img src="#" alt="fotoTHEbridge" />
         </div>
-      </main>
-    </div> -->
-    </div>
+      
+    </div> 
+    
     <!-- <aside>
       <p>esto es el aside</p>
     </aside> -->
