footer de contacto

--- a/biografia.html
+++ b/biografia.html
@@ -7,19 +7,17 @@
     <title>BIOGRAFÍA</title>
     <link rel="stylesheet" type="text/css" href="biografia.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <div class="grande">
       <header>
         <nav class="navbar">
           <div class="logo">
-            <h2>Yann <span>Poirot</span></h2>
+             <a href="home.html"><h2>Yann <span>Poirot</span></h2></a>
           </div>
 
           <ul class="menu">
