pag web completada

--- a/biografia.html
+++ b/biografia.html
@@ -21,9 +21,9 @@
           </div>
 
           <ul class="menu">
+            <li><a href="home.html">Inicio</a></li>
             <li><a href="biografia.html">Biografía</a></li>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="portfolio.html">RRSS</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
